--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/JoshTDesign/team-creator#readme",
   "dependencies": {
-    "inquirer": "^8.0.0"
-  }
+    "inquirer": "^8.0.0",
+    "tailwind": "^4.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.10"  }
 }
