--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+      "test": "jest"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JoshTDesign/team-creator.git"
@@ -22,5 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.10"  }
+    "postcss": "^8.2.10",
+    "jest": "^24.9.0"
+  }
 }
